# 42

./: README.md
Codexion/: head.h  main.c
Python modules/module 04/: sample_data.json
Python modules/module 06/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
Python modules/module 07/: battle.py  capacitor.py  tournament.py
Python modules/module 08/: construct.py
Python modules/module 08/ex1/: loading.py  pyproject.toml
amazing/: Makefile  a_maze_ing.py  config.txt  out.txt
amazing/generator/: generator.py
amazing/parceing/: parce.py
ft_printf/: Makefile  README.md  ft_printf.c  ft_printf.h  ft_printf_utils.c
get_next_line/: README.md  get_next_line.c  get_next_line.h  get_next_line_utils.c
libft/: Makefile  README.md  ft_isdigit.c  ft_itoa.c  ft_lstadd_back.c  ft_lstnew.c  ft_lstsize.c  ft_memcpy.c  ft_memset.c  ft_split.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_tolower.c  libft.h
push_swap/: Makefile  README.md  check_mode_bench.c  checks.c  checks2.c  complex_algo.c  disorder.c  fill_nums.c  int_to_stack.c  main.c  medium_algo.c  medium_helper1.c  medium_helper2.c  print_stderr.c  push_swap  push_swap.h  simple_algo.c  sort_func1.c  sort_func2.c  sort_func3.c
push_swap/libft/: Makefile  checks2.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  (+26 more)
(+67 files in other folders)
