[tool.poetry]
name = "ex1"
version = "0.1.0"
description = "Python module08 ex1"
authors = [
    "mher <mhermkrtchyan2004@gmail.com>"
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = "3.10.8"
pandas = "2.3.3"
numpy = "2.2.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
